--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="popular_news">Popular News</string>
     <string name="image">Image</string>
+    <string name="search">Search</string>
+    <string name="musk_invited">Musk invited</string>
 </resources>
